--- a/src/pages/TodosDesejos/styled.css
+++ b/src/pages/TodosDesejos/styled.css
@@ -22,7 +22,7 @@ font-weight: normal;
 font-size: 20px;
 line-height: 30px;
 /* identical to box height, or 150% */
-justify-content: center;
+justify-content: right;
 align-items: center;
 text-align: right;
 margin-right: 20px;
@@ -31,7 +31,7 @@ margin-right: 20px;
 color: #8F9BB3;
 }
 .group-my-desejos{
-justify-content: center;
+justify-content: right;
 align-items: center;
 text-align: right;   
 }
