--- a/src/components/Navbar/styled.css
+++ b/src/components/Navbar/styled.css
@@ -1,11 +1,13 @@
 .navbar {
-    background-color: #FFFFFF;
-    height: 80px;
+    background-color: #fff;
+    height: 16vh;
     display: flex;
     justify-content: flex-start;
     align-items: center;
   }
-  
+  .ali{
+    font-size: 15px;
+  }
   .menu-bars {
     margin-left: 2rem;
     font-size: 2rem;
