--- a/src/components/Navbar/styled.css
+++ b/src/components/Navbar/styled.css
@@ -2,8 +2,7 @@
     background-color: #fff;
     height: 16vh;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-around;
   }
   .ali{
     font-size: 15px;
