--- a/src/pages/Home/styled.css
+++ b/src/pages/Home/styled.css
@@ -7,15 +7,16 @@
 .main-title {
     border-bottom: 1px solid rgba(130, 130, 130, 0.2);
     margin-bottom: 25px;
+    margin-left: 125px;
     /* left: 0; */
     /* width: 80%; */
 }
 
-.container {
+/* .container {
     border: 2px solid #000;
-    /* padding: 0;
-    margin: 0; */
-}
+    padding: 0;
+    margin: 0; 
+} */
 
 .card {
     width: 16rem;
